--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
