--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-data-table-component": "^6.11.7",
     "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-dropzone-component": "^3.2.0",
     "react-multiple-select-dropdown-lite": "^2.0.4",
     "react-phone-input-2": "^2.13.9",
     "react-router-dom": "^5.2.0",
