--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "braft-editor": "^2.3.9",
+    "braft-extensions": "^0.1.1",
     "browser-image-compression": "^1.0.14",
     "chart.js": "^2.9.4",
     "gpx-parser-builder": "^1.0.2",
