--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dropzone-component": "^3.2.0",
     "react-multiple-select-dropdown-lite": "^2.0.4",
     "react-phone-input-2": "^2.13.9",
+    "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
