--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-file-explorer": "^2.0.0",
+    "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "timeago.js": "^4.0.2",
