--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-image-compression": "^1.0.14",
     "chart.js": "^2.9.4",
     "mdbreact": "^5.0.1",
+    "rc-tree": "^4.1.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-country-region-selector": "^3.0.2",
@@ -26,9 +27,6 @@
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-sortable-tree": "^2.8.0",
-    "react-sortable-tree-theme-file-explorer": "^2.0.0",
-    "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "timeago.js": "^4.0.2",
