--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
     "braft-editor": "^2.3.9",
     "braft-extensions": "^0.1.1",
@@ -27,6 +28,7 @@
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "timeago.js": "^4.0.2",
